Refactor README and HTML files for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
         <h1>Fadi's Web Project</h1>
         <p>HTML5 + CSS Responsive Layout Demo</p>
     </div>
-    
     <div id="nav-placeholder"></div>
 </header>
-
-
 
 <div class="container">
     <aside class="left-aside">
@@ -29,9 +26,8 @@
             <li><a href="#ml">Machine Learning</a></li>
             <li><a href="#business">Digital Marketing</a></li>
         </ul>
-        <p style="margin-top:12px;font-size:0.95rem">Filter courses by category to find lessons, videos and projects.</p>
+        <p>Filter courses by category to find lessons, videos and projects.</p>
     </aside>
-
     <main>
         <h2>Digital Courses</h2>
         <p>Explore practical, bite-sized digital courses designed for students: hands-on projects, video lessons, and quizzes.</p>
@@ -77,11 +73,9 @@
         </ul>
     </aside>
 </div>
-
 <footer>
     <p>Created by Fadi — 2025</p>
 </footer>
-
 <div class="slide-message">
     Thanks for visiting! This message will slide in and fade out.
 </div>
