--- a/form.html
+++ b/form.html
@@ -25,3 +25,16 @@
     <script src="javascript/script.js"></script>
 </body>
 </html>
+
+
+-------
+<div class="form-container">
+    <h2>Contact Us</h2>
+    <form>
+        <div class="form-group">
+            <label>Name</label>
+            <input type="text">
+        </div>
+        <button type="submit" class="button">Submit</button>
+    </form>
+</div>
