Refactor CSS to use variables for colors and improve dark mode support; update HTML structure for consistent navigation and form handling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         <h1>Fadi's Web Project</h1>
         <p>HTML5 + CSS Responsive Layout Demo</p>
     </div>
-    <div id="nav-placeholder"></div>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="form.html">Contact</a>
+        <button id="darkToggle">Dark Mode</button>
+    </nav>
 </header>
 
 <div class="container">
@@ -60,10 +65,6 @@
     </main>
     
     <aside class="right-aside">
-        <div class="aside-actions">
-            <a class="button" href="gallery.html">Open Gallery</a>
-            <button id="darkToggleSmall" class="dm-small">Toggle Dark</button>
-        </div>
         <h3>Instructor Notes</h3>
         <p>Browse course modules, schedules and assignments.</p>
         <ul>
