--- a/form.html
+++ b/form.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Contact Us</h1>
-    <div id="nav-placeholder"></div>
+    <header>
+        <h1>Contact Us</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="form.html">Contact</a>
+            <button id="darkToggle">Dark Mode</button>
+        </nav>
+    </header>
+    <div class="form-flex-container">
     <form>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
@@ -24,5 +32,14 @@
         <button type="submit">Submit</button>
     </form>
     <script src="javascript/script.js"></script>
+
+    <div id="display-area" class="display-card">
+        <h3>Submitted Data:</h3>
+        <p id="output"></p>
+    </div>
+    </div>
+    <footer>
+        <a href="index.html">Back to Home</a>
+    </footer>
 </body>
 </html>
