--- a/gallery.html
+++ b/gallery.html
@@ -7,9 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Responsive Image Gallery</h1>
-    <div id="nav-placeholder"></div>   
-<div class="gallery">
+    <header>
+        <h1>Responsive Image Gallery</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="form.html">Contact</a>
+            <button id="darkToggle">Dark Mode</button>
+        </nav>
+    </header>
+    <div class="gallery">
     <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=800&q=60" alt="Web course">
     <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg" alt="Data course">
     <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=800&q=60" alt="Design course">
@@ -19,8 +26,8 @@
     <img src="https://images.unsplash.com/photo-1516979187457-637abb4f9353?auto=format&fit=crop&w=800&q=60" alt="Sketches">
     <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=800&q=60" alt="Notebooks">
 </div>
-<footer>    
-    <a href="index.html">Back to Home</a>
+<footer>
+    <p>Created by Fadi — 2025</p>
 </footer>
 <script src="javascript/script.js"></script>
 </body>
